-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.13.0
-
None
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/4c310714-c728-11e9-9fc9-52540065bddc
test_1 failed with the following error:
layout: raid0 raid0 pfl pfl pfl dom dom dom flr flr flr Invalid layout: The component end must be aligned by the stripe size
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
racer test_1 - Timeout occurred after 833 mins, last suite running was racer, restarting cluster to continue tests