lustre/include/cl_object.h
@@ -290,8 +290,6 @@ struct cl_layout {
 	struct lu_buf	cl_buf;
 	/** size of layout in lov_mds_md format. */
 	size_t		cl_size;
-	/** size of DoM component if exists or zero otherwise */
-	u64		cl_dom_comp_size;
 	/** Layout generation. */
 	u32		cl_layout_gen;
 	/** whether layout is a composite one */
